Adding unit test cases for components and service.

--- a/src/app/components/country-details-grid/country-details-grid.component.html
+++ b/src/app/components/country-details-grid/country-details-grid.component.html
@@ -1,4 +1,6 @@
-<table class="country-details-grid">
+
+
+<table class="country-details-grid" *ngIf="countryDetails">
     <tr>
         <th>Name</th>
         <th>Capital</th>
